Fixed avatar display on iOS (relative paths)

--- a/app/widgets/geo-overlay/_index.scss
+++ b/app/widgets/geo-overlay/_index.scss
@@ -133,7 +133,7 @@
 
   ._avatar {
     @include icon(60px, 60px, block);
-    -webkit-mask-image: url(/assets/img/hex-large.svg);
+    -webkit-mask-image: url(../img/hex-large.svg);
     -webkit-mask-size: 60px 60px;
   }
 
